--- a/Sunny/Info.plist
+++ b/Sunny/Info.plist
@@ -25,6 +25,11 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+    <key>UIAppFonts</key>
+    <array>
+        <string>Alegreya-Bold.otf</string>
+        <string>Alegreya-Regular.otf</string>
+    </array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
